# agent-research

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  mypy.ini  pyproject.toml  ruff.toml
.claude/: settings.json
config/: settings.yaml
deploy/: .env.example  Dockerfile  build.ps1  deploy.sh  docker-build-guide.md  docker-compose.yml
deploy/nginx/: default.conf
deploy/ssl/: generate-cert.sh
docs/: architecture.md  jenkins-setup-workflow.md  layer-rules.md  user-guide.md
docs/api/: dashboard-endpoints.md  upbit-limits.md
docs/ml/: feature-catalog.md
docs/trading/: risk-rules.md
scripts/: check_layers.py  db_status.py
src/: main.py
src/config/: settings.py
src/repository/: __init__.py  candle_repo.py  database.py  notification_repo.py  order_repo.py  pending_order_repo.py  portfolio_repo.py  ranking_repo.py  signal_repo.py  user_repo.py
src/runtime/: __init__.py  app.py  event_bus.py  scheduler.py
src/service/: candle_builder.py  collector.py  entry_analyzer.py  features.py  paper_engine.py  portfolio.py  predictor.py  risk_manager.py  screener.py  signal_debouncer.py  tick_stream.py  trainer.py  upbit_client.py  upbit_ws.py
src/types/: __init__.py  enums.py  events.py  models.py
tests/integration/: test_event_flow.py  test_position_monitor.py  test_signal_to_trade.py  test_training_integration.py
tests/structural/: test_decimal_enforcement.py  test_layer_deps.py
tests/unit/: test_additional_buy.py  test_admin_balance.py  test_agent_route.py  test_api.py  test_auth.py  test_candle_builder.py  (+33 more)
(+71 files in other folders)
